--- a/0_search/style.scss
+++ b/0_search/style.scss
@@ -17,7 +17,7 @@ a:hover{
 }
 
 .advance-search-title{
-    width: 100px;
+    width: 150px;
 }
 
 .search-engine {
@@ -50,4 +50,13 @@ a:hover{
 
 .search-btn:hover {
     border-color: black;
+}
+
+.advance-search-heading {
+    color:rgb(242, 139, 130);
+
+}
+
+.google-search-icon{
+    max-width: 400px;
 }
